--- a/Assignment Practical Machine learning.Rmd
+++ b/Assignment Practical Machine learning.Rmd
@@ -82,6 +82,8 @@ print(downloaddatum)
 ```
 ## Defining a train, test and validation set (originally the test set)
 
+The train set is split into a training and test set to see how good the models are. The trainingset is 70% of the original training set.
+
 ```{r}
 # building a validation, test and train set
 validation <- test
@@ -92,9 +94,11 @@ dim(train)
 dim(test)
 ```
 
-## Training the models 
+## Training the models
 
-```{r results="hide"}
+Four models are build: random forest, boosted trees ("gbm") and linear discriminant analysis ("lda") model and decision tree.
+
+```{r results="hide", message=FALSE, warning=FALSE}
 set.seed(1)
 mod_rf <- train(classe ~ ., data = train, method = "rf")
 mod_gbm <- train(classe ~ ., data = train, method = "gbm")
@@ -108,6 +112,9 @@ fancyRpartPlot(mod_dt)
 ```
 
 ## Testing the models and selecting the best model
+
+The testset is used to compare the results of the different models. Of each model the comparison against the classes in the testset is defined and the acuracy is printed.The acuracy of the random forest model is the highest.
+
 ```{r}
 pred_rf <- predict(mod_rf, test)
 pred_gbm <- predict(mod_gbm, test)
@@ -121,6 +128,8 @@ confusionMatrix(pred_dt, test$classe)$overall[1]
 ```
 
 ## Prediction on the validation set
+
+The Random Forest model is used to predict the values of the validation set (originally the test set). 
 
 ```{r}
 pred_rf_val <- predict(mod_rf, validation)
